--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -10,3 +10,9 @@ scrape_configs:
       - targets: ["localhost:9100"]
 rule_files:
   - "/usr/local/etc/rule/alerts.yml"
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - localhost:9093
