recording rules configs

--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -10,6 +10,7 @@ scrape_configs:
       - targets: ["localhost:9100"]
 rule_files:
   - "/usr/local/etc/rule/alerts.yml"
+  - "/usr/local/etc/rule/recording_rule.yml"
 
 alerting:
   alertmanagers:
