--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -8,6 +8,10 @@ scrape_configs:
   - job_name: "application-server-node-exporter"
     static_configs:
       - targets: ["localhost:9100"]
+
+  - job_name: "application-server-push-gateway"
+    static_configs:
+      - targets: ["localhost:9091"]
 rule_files:
   - "/usr/local/etc/rule/alerts.yml"
   - "/usr/local/etc/rule/recording_rule.yml"
