--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -3,15 +3,24 @@ global:
 
 scrape_configs:
   - job_name: "prometheus"
+    basic_auth:
+      username: "admin"
+      password: "password"
     static_configs:
       - targets: ["localhost:9090"]
+
   - job_name: "application-server-node-exporter"
     static_configs:
       - targets: ["localhost:9100"]
-
   - job_name: "application-server-push-gateway"
     static_configs:
       - targets: ["localhost:9091"]
+
+  - job_name: "shoehub"
+    scrape_interval: 15s
+    static_configs:
+      - targets: ["localhost:5000"]
+
 rule_files:
   - "/usr/local/etc/rule/alerts.yml"
   - "/usr/local/etc/rule/recording_rule.yml"
